# go2_nav

./: .gitignore  mapping_and_nav_tmux.sh  tmp_tmux.sh
scripts/: atom_action.py  keyboard_ctrl.py  noun_extract_translate.py  owl_detect.py  pub_odom.py
src/custom_interface/: CMakeLists.txt  package.xml
src/go2_behavior_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/go2_behavior_control/config/: keyboard_map.yaml
src/go2_behavior_control/go2_behavior_control/: main.py
src/go2_behavior_control/go2_behavior_control/FSM/: FSMState.py
src/go2_behavior_control/launch/: robot_control.launch
src/go2_behavior_control/scripts/: main.py
src/go2_behavior_control/scripts/common/: enums.py
src/go2_behavior_control/scripts/interface/: cmd_handler.py  keyboard.py
src/go2_behavior_control/scripts/state_machine/: BaseState.py  FSM.py  FixedstandState.py  HighcmdState.py  NavigateState.py  PassiveState.py
src/unitree_move_base/: CMakeLists.txt  package.xml
src/unitree_move_base/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.rviz
src/unitree_move_base/launch/: move_base.launch
src/unitree_nav2/: package.xml  setup.cfg  setup.py
src/unitree_nav2/config/: my_robot.yaml  my_slam_toolbox.yaml
src/unitree_nav2/launch/: lio_mapping_qt_xt16.launch.py  navigation.launch.py
src/unitree_nav2/rviz2/: build_map.rviz  costmap.rviz  slam.rviz
src/unitree_nav2/unitree_nav2/: navigation_to_pose.py  navigation_to_pose2.py  steve_basic_navigator.py
